fix: align item bug on small screen

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ p {
 }
 .sml-txt {
   color: var(--Dark-grayish-blue);
+  font-family: "Montserrat";
 }
 .bold-txt {
   font-weight: 700;
@@ -81,7 +82,7 @@ html {
   background-color: var(--White);
   width: 350px;
   height: auto;
-  padding: 2.2rem;
+  padding: 2.5rem;
   display: flex;
   flex-direction: column;
   gap: 2em;
@@ -91,6 +92,7 @@ html {
 .price {
   display: flex;
   gap: 2em;
+  align-items: center;
 }
 .chrt-btn {
   background-color: var(--Dark-cyan);
@@ -123,14 +125,13 @@ button:hover {
     font-size: 1.1em;
   }
   .container {
-    justify-content: center;
+    margin-inline: auto;
   }
   .container__box {
     flex-direction: column;
-    max-width: 90%;
-    max-height: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 300px;
+    height: auto;
+    margin-inline: auto;
   }
   .img-parfume {
     border-radius: 1em 1em 0 0;
